2022-04-11  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): rewrote the template.

2022-04-04  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newpdfviewer-links): new function.

	* eev-pdflike.el (find-okular-page, ee-find-okular-page-options)
	(ee-find-okular-page): new functions.
	(ee-code-pdfbackend): rewrote the comments in the template.

2022-04-03  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (ee-osm-lat): use `osm--lat' instead of `(osm--lat)'.
	(ee-osm-lon): use `osm--lon' instead of `(osm--lon)'.

2022-03-29  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-pip3-links): new function.
	(find-yttranscript-links): new function.
	(find-youtubedl-links): use `find-yttranscript-links'.

2022-03-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-newbrowser-links): new function (inspired by
	a chat with Quiliro Ordoñez).

2022-03-22  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (ee-url-at-point): new function.

2022-03-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-plinks.el (find-osm-str): new function.

	* eev-tlinks.el (find-osm-links): include a link with
	`find-osm-str'.

2022-03-20  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-eval.el (ee-goto-eol): new function.
	(ee-eval-sexp-eol): use `ee-goto-eol'.

2022-03-18  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-code.el (ee-find-grep): use `find-dbsw-call'.

	* eev-helpful.el: new file.

	* eev-elinks.el (find-evariable-links): added a link to helpful.
	(ee-find-efunction-links): added a link to helpful.

	* eev-hlinks.el (ee-helpful-bufferp): new function.
	(ee-fhl-main-program): use `ee-helpful-bufferp'.

	* eev-plinks.el (find-osm): use `find-dbsw-call'.

2022-03-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (find-dbsw-call): new function.

2022-03-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-blinks.el (ee-find-eww-search-yes, ee-find-eww-search-for):
	new variables.