@@ -203,6 +203,7 @@ the \"*(find-here-links)*\" buffer."
    (:if (ee-epackages-bufferp) (ee-find-epackages-links))
    (:if (ee-osm-bufferp)       (ee-find-osm-links))
    (:if (ee-helpful-bufferp)   (ee-find-helpful-links))
+   (:if (ee-nov-bufferp)       (ee-find-nov-links))
    ;;
    ;; By buffer name:
    (:if (ee-intro-bufferp)     (ee-find-intro-links))
@@ -368,6 +369,7 @@ the \"*(find-here-links)*\" buffer."
 (defun ee-epackages-bufferp () (eq major-mode 'package-menu-mode))
 (defun ee-osm-bufferp       () (eq major-mode 'osm-mode))
 (defun ee-helpful-bufferp   () (eq major-mode 'helpful-mode))
+(defun ee-nov-bufferp       () (eq major-mode 'nov-mode))
 
 ;; By buffer name
 (defun ee-intro-bufferp    () (ee-buffer-re "^\\*(find-\\(.*\\)-intro)\\*$"))
